--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-jsvalidate": "~0.2.2",
     "grunt-legacy-util": "^1.0.0",
     "grunt-wp-i18n": "~0.5.4",
+    "grunt-contrib-compress": "~1.3.0",
     "matchdep": "~1.0.1"
   },
   "engines": {
