--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "grunt-jsvalidate": "~0.2.2",
     "grunt-legacy-util": "^1.0.0",
     "grunt-wp-i18n": "~0.5.4",
-    "grunt-contrib-compress": "~1.3.0",
+    "grunt-git-archive": "~0.0.3",
     "matchdep": "~1.0.1"
   },
   "engines": {
@@ -33,5 +33,5 @@
     "type": "git",
     "url": "https://github.com/imath/wp-statuses.git"
   },
-  "version": "1.2.2"
+  "version": "1.2.3"
 }
