--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
     "minimum-stability": "stable",
     "require": {
       "php": ">=5.3.2",
-      "composer/installers": "v1.0.6"
+      "composer/installers": "~v1.0.12"
     }
 }
