--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
     "type": "git",
     "url": "https://github.com/imath/wp-statuses.git"
   },
-  "version": "1.2.4"
+  "version": "1.3.0-alpha"
 }
