--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   },
   "description": "Suggestions to improve the WordPress Post statuses API.",
   "devDependencies": {
-    "grunt": "~1.0.1",
+    "grunt": "^1.0.4",
+    "grunt-check-dependencies": "^1.0.0",
     "grunt-checktextdomain": "~1.0.1",
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-uglify": "~2.0.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-exec": "~1.0.1",
-    "grunt-check-dependencies": "~0.12.0",
-    "grunt-jsvalidate": "~0.2.2",
-    "grunt-legacy-util": "^1.0.0",
-    "grunt-wp-i18n": "~0.5.4",
     "grunt-git-archive": "~0.0.3",
-    "matchdep": "~1.0.1"
+    "grunt-jsvalidate": "~0.2.2",
+    "grunt-legacy-util": "^1.1.1",
+    "grunt-wp-i18n": "^1.0.3",
+    "matchdep": "^2.0.0"
   },
   "engines": {
     "node": "~6.6.0"
