--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "type": "git",
     "url": "https://github.com/imath/wp-statuses.git"
   },
-  "version": "2.0.0-alpha",
+  "version": "2.0.0",
   "dependencies": {
     "parcel-bundler": "^1.12.3"
   },
