--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "browserslist": "^4.12.0",
     "caniuse-lite": "^1.0.30001048",
     "gettext-parser": "^2.0.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "node-forge": ">=0.10.0"
   },
   "scripts": {
     "start": "parcel watch src/sidebar/index.js -d js --out-file sidebar.js --no-cache",
