--- a/package.json
+++ b/package.json
@@ -5,28 +5,31 @@
   },
   "description": "Suggestions to improve the WordPress Post statuses API.",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/runtime-corejs2": "^7.9.6",
-    "@wordpress/babel-plugin-makepot": "^2.1.2",
-    "@wordpress/babel-preset-default": "^2.1.0",
-    "grunt": "^1.0.4",
+    "@babel/core": "^7.11.6",
+    "@babel/runtime-corejs2": "^7.13.10",
+    "@wordpress/babel-plugin-makepot": "^4.1.1",
+    "@wordpress/babel-preset-default": "^5.0.1",
+    "grunt": "^1.3.0",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-checktextdomain": "~1.0.1",
-    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-clean": "~2.0.0",
     "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-jshint": "~1.0.0",
-    "grunt-contrib-uglify": "~2.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-exec": "~1.0.1",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-exec": "^3.0.0",
     "grunt-git-archive": "~0.0.3",
     "grunt-jsvalidate": "~0.2.2",
-    "grunt-legacy-util": "^1.1.1",
+    "grunt-legacy-util": "^2.0.0",
     "grunt-wp-i18n": "^1.0.3",
     "matchdep": "^2.0.0",
-    "po2json": "^1.0.0-beta-2"
+    "po2json": "^1.0.0-beta-3",
+    "commander": "^6.0.0",
+    "gettext-parser": "~2.0.0",
+    "parcel-bundler": "^1.12.5"
   },
   "engines": {
-    "node": "10.13.0"
+    "node": ">=14.15.0",
+		"npm": ">=6.14.8"
   },
   "keywords": [
     "status"
@@ -39,13 +42,6 @@
     "url": "https://github.com/imath/wp-statuses.git"
   },
   "version": "2.1.1",
-  "dependencies": {
-    "browserslist": "^4.12.0",
-    "caniuse-lite": "^1.0.30001048",
-    "gettext-parser": "^2.0.0",
-    "parcel-bundler": "^1.12.4",
-    "node-forge": ">=0.10.0"
-  },
   "scripts": {
     "start": "parcel watch src/sidebar/index.js -d js --out-file sidebar.js --no-cache",
     "build": "parcel build src/sidebar/index.js -d js --out-file sidebar.min.js --no-cache",
