--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   },
   "description": "Suggestions to improve the WordPress Post statuses API.",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/runtime-corejs2": "^7.13.10",
-    "@wordpress/babel-plugin-makepot": "^4.1.1",
-    "@wordpress/babel-preset-default": "^5.0.1",
-    "grunt": "^1.3.0",
+    "@babel/core": "~7.15.5",
+    "@babel/runtime-corejs2": "^7.15.4",
+    "@wordpress/babel-plugin-makepot": "^4.2.0",
+    "@wordpress/babel-preset-default": "^6.3.2",
+    "grunt": "^1.4.1",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-checktextdomain": "~1.0.1",
     "grunt-contrib-clean": "~2.0.0",
     "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
     "grunt-exec": "^3.0.0",
     "grunt-git-archive": "~0.0.3",
     "grunt-jsvalidate": "~0.2.2",
-    "grunt-legacy-util": "^2.0.0",
+    "grunt-legacy-util": "^2.0.1",
     "grunt-wp-i18n": "^1.0.3",
     "matchdep": "^2.0.0",
     "po2json": "^1.0.0-beta-3",
