Stop using Grunt WP i18n in favor of WP CLI
- Improve `/* transalors: */ comments.
- Regenerate french translation.

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,3 @@
 {
-    "presets": ["@wordpress/default"],
-    "plugins": [
-        [
-            "@wordpress/babel-plugin-makepot",
-            {
-                "output": "languages/js/wp-statuses-sidebar.pot"
-            }
-        ]
-    ]
+	"presets": ["@wordpress/default"]
 }
