--- a/package.json
+++ b/package.json
@@ -5,26 +5,21 @@
   },
   "description": "Suggestions to improve the WordPress Post statuses API.",
   "devDependencies": {
-    "@babel/core": "~7.15.5",
-    "@babel/runtime-corejs2": "^7.15.4",
-    "@wordpress/babel-plugin-makepot": "^4.2.0",
+    "@babel/core": "^7.12.9",
+    "@wordpress/babel-plugin-makepot": "^4.3.1",
     "@wordpress/babel-preset-default": "^6.3.2",
     "grunt": "^1.4.1",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-checktextdomain": "~1.0.1",
     "grunt-contrib-clean": "~2.0.0",
     "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-exec": "^3.0.0",
     "grunt-git-archive": "~0.0.3",
     "grunt-jsvalidate": "~0.2.2",
     "grunt-legacy-util": "^2.0.1",
-    "grunt-wp-i18n": "^1.0.3",
     "matchdep": "^2.0.0",
-    "po2json": "^1.0.0-beta-3",
-    "commander": "^6.0.0",
-    "gettext-parser": "~2.0.0",
     "parcel-bundler": "^1.12.5"
   },
   "engines": {
@@ -45,6 +40,7 @@
   "scripts": {
     "start": "parcel watch src/sidebar/index.js -d js --out-file sidebar.js --no-cache",
     "build": "parcel build src/sidebar/index.js -d js --out-file sidebar.min.js --no-cache",
-    "pot": "po2json languages/js/wp-statuses-sidebar-fr_FR.po languages/js/wp-statuses-fr_FR-wp-statuses-sidebar.json -f jed"
+    "pot": "wp i18n make-pot . languages/wp-statuses.pot --exclude='.github,vendor,node_modules' --headers='{\"Project-Id-Version\": \"WP Statuses\", \"Report-Msgid-Bugs-To\": \"https://github.com/imath/wp-statuses/issues\", \"Last-Translator\": \"imath <contact@imathi.eu>\", \"Language-Team\": \"FRENCH <contact@imathi.eu>\"}'",
+    "po2json": "wp i18n make-json languages/wp-statuses-fr_FR.po --no-purge"
   }
 }
