--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"type": "git",
 		"url": "https://github.com/imath/wp-statuses.git"
 	},
-	"version": "2.1.6",
+	"version": "2.1.7-alpha",
 	"browserslist": [
 		"extends @wordpress/browserslist-config"
 	],
